# Hand_tracking_od

./: .gitignore  .gitmodules  README.md  configure  env.yml  pipeline.dio  pytest.ini
Development/Model/: model.tflite  tflite_label_map.txt
Development/Testing/: CMakeLists.txt  hand_detector.cpp  hand_detector.h  script.sh
Development/install_tools/: Makefile.in  test.sh
Development/pipeline/core_cpp/: CMakeLists.txt  camera_handler.cpp  camera_handler.h  hand_detector.cpp  hand_detector.h  interface_handler.cpp  interface_handler.h  main.cpp  main_test.cpp  script.sh
Development/pipeline/core_py/: __init__.py  hand_simulator.py  utils.py
Development/pipeline/cpp/: CMakeLists.txt  hand_detector.cpp  hand_detector.h
Development/pipeline/python/: camera_handler.py  hand_detector.py  hand_simulator.py  interface_handler.py  main.py
Development/pipeline/tests/: __init__.py  test_model.py
test/: test_camera_handler.py
workspace/annotations/: label_map.pbtxt
workspace/models/finetuned_ssd_model/: checkpoint  ckpt-11.index  pipeline.config
workspace/scripts/: generate_tfrecord.py  utils.py
